@@ -346,6 +346,8 @@
 		'Select objects to include in backup' => "Select objects to include in backup",
 		'Backup folder does not exist or is not writable' => "Backup folder does not exist or is not writable",
 		'Backup type' => "Backup type",
+		'Backup filename' => "Backup filename",
+		'Invalid filename format' => "Invalid filename format",
 		'Database backup successfully created' => "Database backup successfully created",
 		'Failed to create database backup' => "Failed to create database backup",
 		'Generate Bulk insert statements' => "Generate Bulk insert statements",
